# tdbooster

./: .gitignore  dune  dune-project  index.html  main.js  makefile  tdbooster-web.opam  tdbooster.ml  tdbooster.opam  todo.org
.github/workflows/: blank.yml  build.yml  run.yml
data/: const.ml  dune  query.ml  store.ml  type.ml
deriving/: bias.ml  dune  ema.ml  kdj.ml  ma.ml  macd.ml  month_k.ml  op.ml  rsi.ml  type.ml  unify.ml  week_k.ml
elisp/: tdbooster.el
exec/: dune  exec.ml  executor.ml  output.ml
filter/: data_array.ml  dune  industry.ml  industry_trend.ml  kdj.ml  ma_ema.ml  relative_strength.ml  rsi.ml  type.ml  unify.ml
hack/: format_all_files.el
l1/: dune  l1.ml
l1/cursor/: dune
l1/deriving/: bias.ml  dune  ema.ml  kdj.ml  ma.ml  macd.ml  month_k.ml  op.ml  rel.ml  rsi.ml  type.ml  unify.ml  week_k.ml
l1/filter/: data_array.ml  dune  industry.ml  industry_trend.ml  kdj.ml  ma_ema.ml  (+3 more)
l2/: dune  l2.ml
l3/: dune  l3.ml  marketinfo.ml  op.ml  search_info.ml  validate_data.ml
loader/: common_codes.ml  dune  from_baostock.ml  from_baostock.py  from_baostock_ttm.ml  from_baostock_ttm.py  from_sina.ml  from_tonghuashun_txt.ml  from_tonghuashun_txt.mli  from_txt.ml  from_txt.mli  industry.ml  type.ml
public_type/: dune  public_type.ml
score/: dune  score.ml  score.mli
statistics/: dune  oversold.ml  type.ml
strategy/: cursor.ml  dune  log_warning.ml  log_warning.mli  long_term.ml  medium_term.ml  mid_v1.ml  price_status.ml  type.ml  util.ml  v1.ml  volume_status.ml
util/: dune  std.ml
web/: dune  index.html  main.ml  table.ml
(+20 files in other folders)
